--- a/.github/workflows/terraform-docs.yaml
+++ b/.github/workflows/terraform-docs.yaml
@@ -13,7 +13,8 @@ jobs:
     - name: Render terraform docs and push changes back to PR
       uses: terraform-docs/gh-actions@main
       with:
-        working-dir: componenents/jenkins
+        git-commit-message: "Auto-Generated Terraform Documentation"
+        working-dir: ., components/jenkins
         output-file: README.md
         output-method: inject
         git-push: "true"
