--- a/.github/workflows/terraform-docs.yaml
+++ b/.github/workflows/terraform-docs.yaml
@@ -15,6 +15,6 @@ jobs:
       with:
         git-commit-message: "Auto-Generated Terraform Documentation"
         find-dir: components/jenkins
-        output-file: README.md
+        output-file: ../../README.md
         output-method: inject
         git-push: "true"
