--- a/.github/workflows/terraform-docs.yaml
+++ b/.github/workflows/terraform-docs.yaml
@@ -14,7 +14,7 @@ jobs:
       uses: terraform-docs/gh-actions@main
       with:
         git-commit-message: "Auto-Generated Terraform Documentation"
-        find-dir: components/jenkins
-        output-file: ../../README.md
+        recursive-path: components
+        output-file: README.md
         output-method: inject
         git-push: "true"
