Update default path

--- a/.github/workflows/terraform-docs.yaml
+++ b/.github/workflows/terraform-docs.yaml
@@ -15,6 +15,7 @@ jobs:
       with:
         git-commit-message: "Auto-Generated Terraform Documentation"
         recursive: "true"
+        recursive-path: components
         output-file: README.md
         output-method: inject
         git-push: "true"
