--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -2,7 +2,8 @@ trigger:
   batch: "true"
   branches:
     include:
-    - main
+    # - main
+    - DTSPO-13620-cosmosdb
 
 resources:
   repositories:
@@ -18,8 +19,8 @@ parameters:
     default: plan
     values:
     - plan
-    - apply
-    - destroy
+    # - apply
+    # - destroy
 
   - name: environment_components
     type: object
